add:info section

--- a/index.html
+++ b/index.html
@@ -18,15 +18,48 @@
 
     <!-- main -->
     <main>
+        <!-- nav section -->
+            <nav> 
+                <button class="task">Add Task</button>
+                <button class="section">Add Section</button>
+            </nav>
+        <!-- /nav section -->
+
+        <!-- Info section -->
+          <div class="info-section">
+            <ul>
+                <li>
+                    <strong>New Task</strong>
+                    <ul>
+                        <li>&check; Quarterly Newsletter <span class="editorial">Editorial</span></li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Today</strong>
+                    </strong>
+                    <ul>
+                        <li>&check;Recruiting blog post<span class="editorial">Editorial</span></li>
+                        <li>&check;Mobile app launch<span class="q1">Q1 Goals</span></li>
+                        <li>&cross;Interview John H.<span class="recruiting">Recruiting</span></li>
+                        <li>&check;Summit Update to mobile storefronts<span class="mobile">Mobile</span></li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Upcoming</strong>
+                    <ul>
+                        <li>&cross;Schedule meeting with Alex</li>
+                        <li>&check;Homepage refresh<span class="website">Website</span></li>
+                        <li>&check;Onboard new Sales team members<span class="sales">Sales</span></li>
+                        <li>&check;Review editorial calendar<span class="editorial">Editorial</span></li>
+                    </ul>
+                </li>
+            </ol>
+        </div>
+        <!-- /Info section -->
 
     </main>
     <!-- /main -->
 
-    <!-- footer -->
-    <footer>
-
-    </footer>
-    <!-- /footer -->
     
 </body>
 </html>
