--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <div class="container">         
             <!-- nav section -->
-            <nav> 
+            <nav class="nav"> 
                 <button class="task">Add Task</button>
                 <button class="section">Add Section</button>
             </nav>
@@ -28,14 +28,14 @@
          <!-- Info section -->
           <div class="info-section">
             <ul>
-                <li>
-                    <strong>New Task</strong>
+                <li class="task-title">
+                    <strong>&or; New Task</strong>
                     <ul class="task-title">
                         <li><span class="check">&check;</span> Quarterly Newsletter <span class="editorial">Editorial</span></li>
                     </ul>
                 </li>
-                <li>
-                    <strong>Today</strong>
+                <li class="task-title">
+                    <strong>&or; Today</strong>
                     </strong>
                     <ul class="task-title">
                         <li><span class="check">&check;</span> Recruiting blog post<span class="editorial">Editorial</span></li>
@@ -44,8 +44,8 @@
                         <li><span class="check">&check;</span> Summit Update to mobile storefronts<span class="mobile">Mobile</span></li>
                     </ul>
                 </li>
-                <li>
-                    <strong>Upcoming</strong>
+                <li class="task-title">
+                    <strong>&or; Upcoming</strong>
                     <ul class="task-title">
                         <li><span class="cross">&cross;</span> Schedule meeting with Alex</li>
                         <li><span class="check">&check;</span> Homepage refresh<span class="website">Website</span></li>
