add:header correct

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- header -->
-    <header>
+    <header class="header">
         <img class="header-logo" src="/img/Logo.png" alt="boolean logo">
         <h1 class="header-title">Toboolist</h1>
     </header>
