add:margin correction

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 
     <!-- main -->
     <main>
-        <div class="container">         
-            <!-- nav section -->
+         <!-- nav section -->
+         <div class="nav-section"> 
             <nav class="nav"> 
-                <button class="task">Add Task</button>
-                <button class="section">Add Section</button>
-            </nav>
-            <!-- /nav section -->
+              <button class="task">Add Task</button>
+              <button class="section">Add Section</button>
+            </nav>      
+        </div>
+        <!-- /nav section -->  
 
          <!-- Info section -->
           <div class="info-section">
